syntax = "proto3";

option go_package = "gRPC/;gRPC";

package gRPC;

service GreetService {
    rpc Greet (GreetReq) returns (GreetRes){};
};

// struct
message Greeting {
    string first_name = 1;
    string last_name = 2;
}

// greeting = {"first_name", "last_name"}
message GreetReq {
    Greeting greeting = 1;
}

// response
message GreetRes {
    string result = 1;
}
